syntax = "proto3";
option go_package = "github.com/milaniez/teleportselftest/protojob";
package protojob;

service Worker {
  rpc Start(Cmd) returns (JobID) {}
  rpc GetStatus(JobID) returns (Status) {}
  rpc GetJobIDs(Empty) returns (JobIDList) {}
  rpc GetResult(JobID) returns (Result) {}
  rpc StreamOutput(JobID) returns (stream Output) {}
}

message Empty {
}

message JobID {
  uint64 id = 1;
}

message JobIDList {
  repeated uint64 id = 1;
}

message Cmd {
  string name = 1;
  repeated string args = 2;
}

message Status {
  enum RunStatus {
    RUN_STATUS_PENDING = 0;
    RUN_STATUS_RUNNING = 1;
    RUN_STATUS_FINISHED = 2;
  }
  RunStatus runStatus = 1;
  enum ExitStatus {
    EXIT_STATUS_OK = 0;
    EXIT_STATUS_ABORTED = 1;
    EXIT_STATUS_FAILURE = 2;
    EXIT_STATUS_TIME_EXCEEDED = 3;
    EXIT_STATUS_CPU_EXCEEDED = 4;
    EXIT_STATUS_MEM_EXCEEDED = 5;
  }
  ExitStatus exitStatus = 2;
}

message Result {
  bool finished = 1;
  string output = 2;
}

message Output {
  string output = 1;
}